src/objects/Software_Access_Request__c.object
<CustomObject>
    <description>Stores information for the Software Access Request.</description>
    <fields>
        <fullName>Additional_comments__c</fullName>
        <label>Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alliances_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.Alliances_Email__c</defaultValue>
        <label>Alliances Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Content_items__c</fullName>
        <label>Content items</label>
        <picklist>
            <picklistValues>
                <fullName>CA Standards Based Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP Standards Based Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Standards Based Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Standards Based Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WC Standards Based Template</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_quantity__c</fullName>
        <label>Core quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>(to be granted the software access)</inlineHelpText>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please make sure  Customer is selected before selecting Customer contact information</errorMessage>
            <filterItems>
                <field>Account_Contact__c.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <filterItems>
                <field>$Source.Customer_Name__c</field>
                <operation>equals</operation>
                <valueField>Account_Contact__c.Participant_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Contact__c</referenceTo>
        <relationshipLabel>Software Access Requests</relationshipLabel>
        <relationshipName>Software_Access_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner, Customer, Vendor, Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Software Access Requests</relationshipLabel>
        <relationshipName>Software_Access_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Software_Access_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_time_zone__c</fullName>
        <label>Customer time zone</label>
        <picklist>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_needed__c</fullName>
        <inlineHelpText>(24 hours notice required)</inlineHelpText>
        <label>Date needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_type__c</fullName>
        <label>Delivery type</label>
        <picklist>
            <picklistValues>
                <fullName>Gold Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_Packs__c</fullName>
        <label>Ext Packs</label>
        <picklist>
            <picklistValues>
                <fullName>London Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell Decision Point Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell WorkCenter Integration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.HelpDesk_Email__c</defaultValue>
        <label>HelpDesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Live_Request_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.Live_Request_Email__c</defaultValue>
        <label>Live Request Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Live_apps__c</fullName>
        <label>Live apps</label>
        <picklist>
            <picklistValues>
                <fullName>Catastrophe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hail Forensics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewPoint for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Other)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Software Access Requests</relationshipLabel>
        <relationshipName>Software_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <picklist>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Portals__c</fullName>
        <label>Portals</label>
        <picklist>
            <picklistValues>
                <fullName>Account Mgnt Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote and Buy Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Other)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Predictive_Products_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.Predictive_Products_Email__c</defaultValue>
        <label>Predictive Products Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Predictive_Products_End_Date__c</fullName>
        <label>Predictive Products End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Predictive_Products_Start_Date__c</fullName>
        <label>Predictive Products Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Predictive_Products__c</fullName>
        <label>Predictive Products</label>
        <picklist>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Model Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Scoring Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExampleCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBOP Data Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards Based Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thunderhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Request_type__c</fullName>
        <label>Request type</label>
        <picklist>
            <picklistValues>
                <fullName>Early Adopters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Other)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Name</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Software Access Requests</relationshipLabel>
        <relationshipName>Software_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_account_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales account manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Software Access Requests (Sales account manager)</relationshipLabel>
        <relationshipName>Software_Access_RequestsSAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_standard__c</fullName>
        <label>Service standard</label>
        <picklist>
            <picklistValues>
                <fullName>Non-standard (provide contract)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_account_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services account manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Software_Access_RequestsAM</relationshipLabel>
        <relationshipName>Software_Access_RequestsAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.Software_Delivery_Email__c</defaultValue>
        <label>Software Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Software_Removal_Date__c</fullName>
        <label>Software Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SupportOperations_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.SupportOperations_Email__c</defaultValue>
        <label>SupportOperations Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TDC_Mgmt_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.TDC_MGMT_Email__c</defaultValue>
        <label>TDC-Mgmt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Thunderhead_Email__c</fullName>
        <defaultValue>$Setup.SAR_Emails__c.ThunderheadEmail__c</defaultValue>
        <label>Thunderhead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Thunderhead_End_Date__c</fullName>
        <inlineHelpText>End date specific to Thunderhead.</inlineHelpText>
        <label>Thunderhead End Date</label>
        <type>Date</type>
    </fields>
    <label>Software Access Request</label>
    <listViews>
        <fullName>My_Draft_Requests</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Products__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>My Draft Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Requests</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Products__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Submitted Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Software Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Request_Type_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Request_type__c, &apos;&apos;) &amp;&amp;  ISPICKVAL(Status__c, &apos;Submitted&apos;) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Request_type__c</errorDisplayField>
        <errorMessage>Request Type is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Thunderhead_End_Date_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES(Products__c, &quot;Thunderhead&quot;) &amp;&amp; ISBLANK( Thunderhead_End_Date__c) &amp;&amp; ISPICKVAL(Status__c , &apos;Submitted&apos;)</errorConditionFormula>
        <errorDisplayField>Thunderhead_End_Date__c</errorDisplayField>
        <errorMessage>Thunderhead End Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Date_Needed</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Date_needed__c) &amp;&amp;  ISPICKVAL(Status__c , &apos;Submitted&apos;), TRUE , FALSE)</errorConditionFormula>
        <errorDisplayField>Date_needed__c</errorDisplayField>
        <errorMessage>Date needed is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Products</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Products__c) &amp;&amp;  ISPICKVAL(Status__c , &apos;Submitted&apos;), TRUE , FALSE)</errorConditionFormula>
        <errorDisplayField>Products__c</errorDisplayField>
        <errorMessage>Please select at least one product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Service_standard</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(Request_type__c, &apos;New customer&apos;) &amp;&amp;  ISPICKVAL(Status__c , &apos;Submitted&apos;) &amp;&amp; ISPICKVAL( Service_standard__c, &apos;&apos;), TRUE , FALSE)</errorConditionFormula>
        <errorDisplayField>Service_standard__c</errorDisplayField>
        <errorMessage>Service standard is required if Request Type is New Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Software_Removal_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Software_Removal_Date__c) &amp;&amp; ( ISPICKVAL(Request_type__c , &apos;Temporary prospect&apos;)  || ISPICKVAL(Request_type__c , &apos;Early Adopters&apos;)) &amp;&amp;  ISPICKVAL(Status__c , &apos;Submitted&apos;), TRUE , FALSE)</errorConditionFormula>
        <errorDisplayField>Software_Removal_Date__c</errorDisplayField>
        <errorMessage>Software Removal Date is required.</errorMessage>
    </validationRules>
</CustomObject>